force-app/main/default/objects/custom_create43__c/custom_create43__c.object-meta.xml
<CustomObject>
    <label>Custom created object43</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects43</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>