force-app/main/default/objects/custom_create43__c/fields/custom_create_43field543__c.field-meta.xml
<CustomField>
    <fullName>custom_create_43field543__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 43field543</label>
    <type>Checkbox</type>
</CustomField>